--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -84,7 +84,7 @@ menu li {
   padding: 1rem;
 }
 
-.container {
+.container-y {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
@@ -93,7 +93,7 @@ menu li {
       scroll-snap-type: y mandatory;
 }
 
-.section {
+.full-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,5 +111,36 @@ menu li {
   width: 100%;
   height: 100vh;
   scroll-snap-align: center;
+}
+
+.container-x {
+  width: 100%;
+  height: 100%;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  -ms-scroll-snap-type: x mandatory;
+      scroll-snap-type: x mandatory;
+}
+
+.card-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  width: 80%;
+  height: 80vh;
+  margin: 10%;
+  scroll-snap-align: center;
+  background-color: yellow;
 }
 /*# sourceMappingURL=style.css.map */
