--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -66,7 +66,7 @@ menu {
   }
 }
 
-.container{
+.container-y{
   width: 100%;
   height: 100%;
   overflow-y: scroll;
@@ -74,7 +74,7 @@ menu {
   scroll-snap-type: y mandatory;
 }
 
-.section{
+.full-section{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,4 +83,26 @@ menu {
   width: 100%;
   height: 100vh;
   scroll-snap-align: center;
+}
+
+
+.container-x{
+  width: 100%;
+  height: 100%;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+
+.card-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 80%;
+  height: 80vh;
+  margin: 10%;
+  scroll-snap-align: center;
+  background-color: yellow;
 }
