--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,8 @@
+@mixin center{
+  justify-content: center;
+  align-items: center;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +13,6 @@ body {
   color: rgb(0, 0, 0);
   line-height: 1.6;
   min-height: 100vh;
-  overflow: hidden;
 }
 
 nav {
@@ -66,43 +70,22 @@ menu {
   }
 }
 
-// .container-y{
-//   width: 100%;
-//   height: 100%;
-//   overflow-y: scroll;
-//   scroll-behavior: smooth;
-//   scroll-snap-type: y mandatory;
-// }
+.center{
+  text-align: center;
+  @include center;
+}
 
-// .full-section{
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   text-align: center;
-//   width: 100%;
-//   height: 100vh;
-//   scroll-snap-align: center;
-// }
+#home-page{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  @include center;
 
+  h1{
+    font-size: 5rem;
+  }
+}
 
-// .container-x{
-//   width: 100%;
-//   height: 100%;
-//   overflow-x: scroll;
-//   scroll-behavior: smooth;
-//   scroll-snap-type: x mandatory;
-// }
-
-// .card-section{
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   text-align: center;
-//   width: 80%;
-//   height: 80vh;
-//   margin: 10%;
-//   scroll-snap-align: center;
-//   background-color: yellow;
-// }
+.b\&w{
+  filter: grayscale(100%);
+}
