--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,7 +7,7 @@ body {
   background: white;
   color: black;
   line-height: 1.6;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 nav {
@@ -91,6 +91,43 @@ menu li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.container {
+  max-height: 100vh;
+  overflow: scroll;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
+}
+
+.item {
+  background-color: pink;
+  border: 3px solid black;
+  height: 80vh;
+  margin: 60px 60px 0px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  scroll-snap-align: center;
+}
+
+#bottom-item {
+  margin: 60px;
+}
+
+#about-me {
+  width: 100%;
+  min-height: 100vh;
 }
 
 #home-page {
