fix top padding

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -121,6 +121,10 @@ menu li {
   scroll-snap-align: center;
 }
 
+#top-item {
+  margin: 90px 60px 0px 60px;
+}
+
 #bottom-item {
   margin: 60px;
 }
