--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,25 +3,25 @@
   padding: 0;
 }
 
-/* total width */
+/* scrollbar width */
 *::-webkit-scrollbar {
   background-color: #fff;
   width: 16px;
 }
 
-/* background of the scrollbar except button or resizer */
+/* background of the scrollbar*/
 *::-webkit-scrollbar-track {
   background-color: #fff;
 }
 
-/* scrollbar itself */
+/* scrollbar bar */
 *::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
   border: 4px solid #fff;
 }
 
-/* set button(top and bottom of the scrollbar) */
+/* Top and bottom button */
 *::-webkit-scrollbar-button {
   display: none;
 }
@@ -116,11 +116,55 @@ menu li {
           align-items: center;
 }
 
-.container {
+.container-y {
   max-height: 100vh;
   overflow: scroll;
   -ms-scroll-snap-type: y mandatory;
       scroll-snap-type: y mandatory;
+}
+
+.container-x {
+  max-width: 100vw;
+  overflow-x: scroll;
+  -ms-scroll-snap-type: x mandatory;
+      scroll-snap-type: x mandatory;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.item-x {
+  background-color: pink;
+  border: 3px solid black;
+  height: 60vh;
+  min-width: 60vw;
+  margin: 75px 60px 75px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  scroll-snap-align: center;
+}
+
+#end-item {
+  margin: 75px 300px 75px 60px;
+}
+
+#start-item {
+  margin: 75px 60px 75px 300px;
 }
 
 .item {
