--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@mixin center{
+@mixin center {
   justify-content: center;
   align-items: center;
 }
@@ -8,27 +8,27 @@
   padding: 0;
 }
 
-/* total width */
+/* scrollbar width */
 *::-webkit-scrollbar {
   background-color: #fff;
   width: 16px;
 }
 
-/* background of the scrollbar except button or resizer */
+/* background of the scrollbar*/
 *::-webkit-scrollbar-track {
   background-color: #fff;
 }
 
-/* scrollbar itself */
+/* scrollbar bar */
 *::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
   border: 4px solid #fff;
 }
 
-/* set button(top and bottom of the scrollbar) */
+/* Top and bottom button */
 *::-webkit-scrollbar-button {
-  display:none;
+  display: none;
 }
 
 body {
@@ -93,19 +93,47 @@ menu {
   }
 }
 
-.center{
+.center {
   text-align: center;
   @include center;
 }
 
-.container{
+.container-y {
   max-height: 100vh;
   overflow: scroll;
   scroll-snap-type: y mandatory;
 }
 
-.item{
-  background-color:pink;
+.container-x {
+  max-width: 100vw;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  display: flex;
+  flex-direction: row;
+}
+
+.item-x {
+  background-color: pink;
+  border: 3px solid black;
+  height: 60vh;
+  min-width: 60vw;
+  margin: 75px 60px 75px 60px;
+  display: flex;
+  @include center;
+  flex-direction: column;
+  scroll-snap-align: center;
+}
+
+#end-item {
+  margin: 75px 300px 75px 60px;
+}
+
+#start-item {
+  margin: 75px 60px 75px 300px;
+}
+
+.item {
+  background-color: pink;
   border: 3px solid black;
   height: 80vh;
   margin: 60px 60px 0px 60px;
@@ -115,30 +143,32 @@ menu {
   scroll-snap-align: center;
 }
 
-#top-item{
+
+
+#top-item {
   margin: 90px 60px 0px 60px;
 }
 
-#bottom-item{
+#bottom-item {
   margin: 60px;
 }
 
-#about-me{
+#about-me {
   width: 100%;
   min-height: 100vh;
 }
 
-#home-page{
+#home-page {
   width: 100%;
   height: 100vh;
   display: flex;
   @include center;
 
-  h1{
+  h1 {
     font-size: 5rem;
   }
 }
 
-.b\&w{
+.b\&w {
   filter: grayscale(100%);
 }
