--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,25 +8,25 @@
   padding: 0;
 }
 
-/* scrollbar width */
+// scrollbar width
 *::-webkit-scrollbar {
   background-color: #fff;
   width: 16px;
 }
 
-/* background of the scrollbar*/
+// background of the scrollbar
 *::-webkit-scrollbar-track {
   background-color: #fff;
 }
 
-/* scrollbar bar */
+// scrollbar bar
 *::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
   border: 4px solid #fff;
 }
 
-/* Top and bottom button */
+// Top and bottom button
 *::-webkit-scrollbar-button {
   display: none;
 }
@@ -172,3 +172,81 @@ menu {
 .b\&w {
   filter: grayscale(100%);
 }
+
+#contact-me {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+}
+
+.contact-me {
+  min-height: 40vh;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+
+form {
+  width: 50%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.form {
+  position: relative;
+  height: 5%;
+  width: 70%;
+
+  input {
+    width: 100%;
+    height: 150%;
+    color: blue;
+    padding-top: 20px;
+    border: none;
+    outline: none;
+  }
+
+  label {
+    position: absolute;
+    top: 0px;
+    left: 0%;
+    width: 100%;
+    height: 50px;
+    pointer-events: none;
+    border-bottom: 1px solid black;
+  }
+  label::after{
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
+    height: 100%;
+    width: 100%;
+    border-bottom: 3px solid skyblue;
+    transform: translateX(-100%);
+    transition: all 0.3s ease;
+  }
+
+  input:focus + .label-name .content-name, 
+  input:valid + .label-name .content-name{
+    transform: translateY(-100%);
+    font-size: 0.9rem;
+    color: skyblue;
+  }
+
+  input:focus + .label-name::after, 
+  input:valid + .label-name::after{
+    transform: translateX(0%);
+  }
+}
+
+.content-name{
+  position: absolute;
+  bottom: 5px;
+  left: 0px;
+  transition: all 0.3s ease;
+}
+
