--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -61,7 +61,6 @@ nav ul {
 }
 
 nav ul li {
-  margin: 0 1rem;
   padding: 1rem;
 }
 
@@ -207,10 +206,29 @@ menu li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #home-page h1 {
   font-size: 5rem;
+}
+
+#home-page main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 #contact-me {
@@ -222,6 +240,13 @@ menu li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .b\&w {
@@ -275,7 +300,7 @@ form {
   width: 100%;
   height: 150%;
   color: blue;
-  padding-top: 20px;
+  padding-top: 10px;
   border: none;
   outline: none;
 }
@@ -334,5 +359,9 @@ form {
   border-radius: 5px;
   border: 2px solid black;
   cursor: pointer;
+}
+
+footer {
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
