--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -59,7 +59,6 @@ nav {
     flex-direction: row;
 
     li {
-      margin: 0 1rem;
       padding: 1rem;
 
       a {
@@ -175,9 +174,16 @@ menu {
   height: 100vh;
   display: flex;
   @include center;
+  flex-direction: column;
 
   h1 {
     font-size: 5rem;
+  }
+
+  main{
+    display: flex;
+    @include center;
+    flex-grow: 1;
   }
 }
 
@@ -186,9 +192,9 @@ menu {
   width: 100vw;
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-
-
 
 //class for making icons black and white (does not work well) Replace asap
 .b\&w {
@@ -226,7 +232,7 @@ form {
     width: 100%;
     height: 150%;
     color: blue;
-    padding-top: 20px;
+    padding-top: 10px;
     border: none;
     outline: none;
   }
@@ -280,4 +286,8 @@ form {
   border-radius: 5px;
   border: 2px solid black;
   cursor: pointer;
+}
+
+footer{
+  text-align: center;
 }
