--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,18 +4,18 @@
 }
 
 *::-webkit-scrollbar {
-  background-color: #fff;
+  background-color: #0f0e17;
   width: 16px;
 }
 
 *::-webkit-scrollbar-track {
-  background-color: #fff;
+  background-color: #0f0e17;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #babac0;
+  background-color: #a7a9be;
   border-radius: 16px;
-  border: 4px solid #fff;
+  border: 4px solid #0f0e17;
 }
 
 *::-webkit-scrollbar-button {
@@ -23,8 +23,8 @@
 }
 
 body {
-  background: white;
-  color: black;
+  background: #0f0e17;
+  color: #fffffe;
   line-height: 1.6;
   height: 100vh;
 }
@@ -67,21 +67,21 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   text-transform: uppercase;
-  color: #f4f4f4;
+  color: #fffffe;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   font-size: 1rem;
 }
 
 nav ul li a:hover {
-  color: #56c9e6;
+  color: #ff8906;
   font-size: 1.1rem;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
 nav ul li a:active {
-  color: #56c9e6;
+  color: #ff8906;
   font-size: 0.9rem;
 }
 
@@ -139,7 +139,7 @@ menu li {
 }
 
 .item-x {
-  background-color: pink;
+  background-color: #ff8906;
   border: 3px solid black;
   height: 60vh;
   min-width: 60vw;
@@ -161,9 +161,9 @@ menu li {
 }
 
 .item {
-  background-color: pink;
+  background-color: #ff8906;
   border: 3px solid black;
-  height: 80vh;
+  height: 60vh;
   margin: 60px 60px 0px 60px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -299,10 +299,11 @@ form {
 .form input {
   width: 100%;
   height: 150%;
-  color: blue;
+  color: #fffffe;
   padding-top: 10px;
   border: none;
   outline: none;
+  background-color: #0f0e17;
 }
 
 .form label {
@@ -312,7 +313,7 @@ form {
   width: 100%;
   height: 50px;
   pointer-events: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #fffffe;
 }
 
 .form label::after {
@@ -322,7 +323,7 @@ form {
   bottom: -1px;
   height: 100%;
   width: 100%;
-  border-bottom: 3px solid skyblue;
+  border-bottom: 3px solid #e53170;
   -webkit-transform: translateX(-150%);
           transform: translateX(-150%);
   -webkit-transition: all 0.3s ease;
@@ -335,7 +336,7 @@ form {
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
   font-size: 0.9rem;
-  color: skyblue;
+  color: #e53170;
   opacity: 100%;
 }
 
@@ -357,8 +358,16 @@ form {
 .button {
   padding: 10px;
   border-radius: 5px;
+  color: #fffffe;
+  background-color: #ff8906;
   border: 2px solid black;
   cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.button:hover {
+  padding: 15px;
 }
 
 footer {
