--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -27,10 +27,26 @@ body {
   color: #fffffe;
   line-height: 1.6;
   height: 100vh;
+  font-family: "Quicksand", sans-serif;
+  max-height: 100vh;
 }
 
 body h1 {
-  font-family: sans-serif;
+  font-family: "Arvo", serif;
+  text-shadow: 1px 1px 3px black;
+}
+
+body p {
+  font-family: "Quicksand", sans-serif;
+  font-weight: lighter;
+  text-shadow: 2px 2px 3px black;
+}
+
+body h2 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: lighter;
+  font-size: 12px;
+  text-shadow: 2px 2px 3px black;
 }
 
 nav {
@@ -105,6 +121,23 @@ menu li {
   padding: 1rem;
 }
 
+menu li image {
+  background-color: white;
+}
+
+.logo {
+  display: block;
+  width: 50px;
+  height: 50px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.logo:hover {
+  width: 55px;
+  height: 55px;
+}
+
 .center {
   text-align: center;
   -webkit-box-pack: center;
@@ -116,7 +149,7 @@ menu li {
 }
 
 .container-y {
-  max-height: 100vh;
+  max-height: 95vh;
   overflow: scroll;
   -ms-scroll-snap-type: y mandatory;
       scroll-snap-type: y mandatory;
@@ -179,10 +212,47 @@ menu li {
       -ms-flex-direction: column;
           flex-direction: column;
   scroll-snap-align: center;
+  overflow-x: hidden;
 }
 
-.top-item {
-  margin: 90px 60px 0px 60px;
+.item-blog {
+  background-color: #ff8906;
+  border: 3px solid black;
+  height: 60vh;
+  margin: 60px 60px 0px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  scroll-snap-align: center;
+  overflow-x: hidden;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.item-blog article {
+  padding: 40px;
+}
+
+.item-blog .blog-image-container {
+  width: 50%;
+  height: 100%;
+}
+
+.item-blog .blog-image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .bottom-item {
@@ -231,6 +301,23 @@ menu li {
           flex-grow: 1;
 }
 
+header {
+  margin-top: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  max-height: 10vh;
+}
+
 #contact-me {
   height: 100vh;
   width: 100vw;
@@ -247,11 +334,6 @@ menu li {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.b\&w {
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
 }
 
 .contact-me {
@@ -372,5 +454,21 @@ form {
 
 footer {
   text-align: center;
+  max-height: 5vh;
+}
+
+@media screen and (max-width: 480px) {
+  nav ul li {
+    padding: 0.8rem;
+  }
+  nav ul li a {
+    font-size: 0.7rem;
+  }
+  nav ul li a:hover {
+    font-size: 0.8rem;
+  }
+  nav ul li a:active {
+    font-size: 0.6rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
