--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,8 +3,10 @@ $paragraph-color: #a7a9be;
 $headline-color: #fffffe;
 $secondary-color: #ff8906;
 $tertiary-color: #e53170;
-$font1: 'Arvo', serif;
-$font2: 'Quicksand', sans-serif;
+$font1: 'Ubuntu',
+serif;
+$font2: 'Quicksand',
+sans-serif;
 
 @mixin center {
   justify-content: center;
@@ -40,6 +42,8 @@ $font2: 'Quicksand', sans-serif;
   display: none;
 }
 
+
+// Default Body styling so if something is left out below we get a default look
 body {
   background: $background-color;
   color: $headline-color;
@@ -53,15 +57,15 @@ body {
     text-shadow: 1px 1px 3px black;
   }
 
-  p{
+  p {
     font-family: $font2;
-    font-weight: lighter ;
+    font-weight: lighter;
     text-shadow: 2px 2px 3px black;
   }
 
-  h2{
+  time {
     font-family: $font2;
-    font-weight: lighter ;
+    font-weight: lighter;
     font-size: 12px;
     text-shadow: 2px 2px 3px black;
   }
@@ -109,6 +113,14 @@ nav {
   }
 }
 
+header {
+  margin-top: 80px;
+  display: flex;
+  @include center;
+  flex-grow: 1;
+  max-height: 10vh;
+}
+
 // used for links to social media on index.html
 menu {
   display: flex;
@@ -120,20 +132,38 @@ menu {
   li {
     margin: 0 1rem;
     padding: 1rem;
-    image{
+
+    image {
       background-color: white;
     }
   }
 }
 
-.logo{
+
+// Creates spacing and hiding of important elements (hiding of animation)
+form {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+  height: 600px;
+  overflow: hidden;
+}
+
+footer {
+  text-align: center;
+  max-height: 5vh;
+}
+
+.logo {
   display: block;
   width: 50px;
   height: 50px;
   transition: 0.5s;
 }
 
-.logo:hover{
+.logo:hover {
   width: 55px;
   height: 55px;
 }
@@ -199,17 +229,16 @@ menu {
   overflow-x: hidden;
   justify-content: space-around;
 
-  article{
+  article {
     padding: 40px;
   }
 
-  .blog-image-container{
+  .blog-image-container {
     width: 50%;
     height: 100%
-
-
   }
-  .blog-image{
+
+  .blog-image {
     object-fit: cover;
     width: 100%;
     height: 100%
@@ -223,47 +252,6 @@ menu {
   margin: 60px;
 }
 
-#about-me {
-  width: 100%;
-  min-height: 100vh;
-}
-
-#home-page {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  @include center;
-  flex-direction: column;
-
-  h1 {
-    font-size: 5rem;
-  }
-
-  main {
-    display: flex;
-    @include center;
-    flex-grow: 1;
-  }
-}
-
-
-header{
-  margin-top: 80px;
-  display: flex;
-  @include center;
-  flex-grow: 1;
-  max-height: 10vh;
-}
-
-#contact-me {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
 //used for the form inside of the id contact-me (BAD NAMING)
 .contact-me {
   min-height: 40vh;
@@ -274,16 +262,6 @@ header{
   flex-direction: column;
 }
 
-// Creates spacing and hiding of important elements (hiding of animation)
-form {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  width: 50%;
-  height: 600px;
-  overflow: hidden;
-}
 
 // Animation used in clicking on elements inside of form
 .form {
@@ -360,30 +338,94 @@ form {
   padding: 15px;
 }
 
-footer {
-  text-align: center;
-  max-height: 5vh;
+#gold {
+  transition: 0.3s linear;
+
+  &:hover {
+    color: gold;
+    font-size: 4rem;
+  }
+}
+
+#contact-me {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#red {
+  transition: 0.3s linear;
+
+  &:hover {
+    color: red;
+    font-size: 6rem;
+  }
+}
+
+#about-me {
+  width: 100%;
+  min-height: 100vh;
+}
+
+#home-page {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  @include center;
+  flex-direction: column;
+
+  h1 {
+    font-size: 5rem;
+    cursor: default;
+  }
+
+  main {
+    display: flex;
+    @include center;
+    flex-grow: 1;
+  }
 }
 
 //mobile phone screens
 @media screen and (max-width: 480px) {
   nav {
+    height: 55px;
     ul {
       li {
         padding: 0.8rem;
 
         a {
           font-size: 0.7rem;
-        }
 
-        a:hover {
-          font-size: 0.8rem;
-        }
+          &:hover {
+            font-size: 0.8rem;
+          }
 
-        a:active {
-          font-size: 0.6rem;
+          &:active {
+            font-size: 0.6rem;
+          }
         }
       }
+    }
+  }
+
+  menu {
+    li {
+      margin: 0;
+      padding: 1rem;
+    }
+
+    .logo {
+      width: 20px;
+    }
+  }
+
+  #home-page {
+    h1 {
+      font-size: 3rem;
     }
   }
 }
