--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -505,6 +505,9 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
+  *::-webkit-scrollbar {
+    display: none;
+  }
   nav ul li {
     padding: 0.8rem;
   }
@@ -662,12 +665,57 @@ footer {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
   menu li {
     margin: 0;
     padding: 1rem;
   }
   menu .logo {
     width: 20px;
+  }
+  .item-blog {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 30px 10px 0px 10px;
+    overflow: hidden;
+    height: 80vh;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .item-blog .blog-image-container {
+    width: 100%;
+    height: 50%;
+  }
+  .item-blog article {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 10px;
   }
   #home-page h1 {
     font-size: 3rem;
