--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -186,6 +186,8 @@ footer {
   height: 55px;
 }
 
+
+
 // Center align class
 .center {
   text-align: center;
@@ -409,6 +411,10 @@ footer {
 
 //mobile phone screens
 @media screen and (max-width: 480px) {
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
   nav {
     ul {
       li {
@@ -559,6 +565,11 @@ nav{
   }
 }
 
+article{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 
   menu {
     li {
@@ -570,6 +581,27 @@ nav{
       width: 20px;
     }
   }
+
+  .item-blog{
+    flex-direction: column;
+    margin: 30px 10px 0px 10px;
+    overflow: hidden;
+    height: 80vh;
+    justify-content: flex-start;
+    .blog-image-container{
+      width:100%;
+      height: 50%;
+    }
+    article{
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+    }
+  }
+
 
   #home-page {
     h1 {
