--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -582,6 +582,12 @@ article{
     }
   }
 
+  .item{
+    margin: 30px 10px 0px 10px;
+    height: 80vh;
+    padding: 10px;
+  }
+
   .item-blog{
     flex-direction: column;
     margin: 30px 10px 0px 10px;
@@ -609,3 +615,220 @@ article{
     }
   }
 }
+
+@media screen and (orientation: landscape) and (max-width: 820px){
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
+  form{
+    justify-content: space-between;
+  }
+
+  nav {
+    ul {
+      li {
+        padding: 0.8rem;
+
+        a {
+          font-size: 2rem;
+
+          &:hover {
+            font-size: 2.2rem;
+          }
+
+          &:active {
+            font-size: 1.8rem;
+          }
+        }
+      }
+    }
+  }
+
+nav{
+  input{
+    display: block;
+  }
+
+  .toggler{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    opacity: 0;
+  }
+  .hamburger{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    z-index: 1;
+    width: 60px;
+    height: 60px;
+    padding: 1rem;
+    background: $hamburger-bg-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .hamburger > div{
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+
+    // style for top and bottom lines
+    &:before,
+    &:after{
+      content: '';
+      position: absolute;
+      z-index: 1;
+      top: -10px;
+      width: 100%;
+      height: 2px;
+      background: inherit;
+    }
+    // moves bottom line down
+    &:after{
+      top: 10px;
+    }
+  }
+}
+
+// toggler animation
+nav{
+  .toggler:checked + .hamburger > div{
+    transform: rotate(135deg);
+
+    &:before,
+    &:after{
+      top: 0;
+      transform: rotate(90deg);
+    }
+  }
+}
+
+// Rotate when hover is checked
+nav{
+  .toggler:checked:hover + .hamburger > div{
+    transform: rotate(225deg);
+  }
+}
+
+// show menu
+nav .toggler:checked ~ .menu{
+  visibility: visible;
+  div{
+    transform: scale(1);
+    transition-duration: $nav-speed;
+    div{
+      opacity: 1;
+      transition: opacity 0.4s ease;
+    }
+  }
+}
+
+nav{
+  height: 0;
+  .menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    div{
+      background: $nav-color;
+      width: 200vw;
+      height: 200vw;
+      display: flex;
+      flex: none;
+      align-items: center;
+      justify-content: center;
+      transform: scale(0);
+      transition: all 0.4s ease;
+
+      div{
+        text-align: center;
+        max-width: 100vw;
+        max-height: 100vh;
+        opacity: 0;
+        transition: opacity 0.4s ease;
+
+        ul{
+          flex-direction: column;
+        }
+      }
+    }
+  }
+}
+
+article{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+  menu {
+    li {
+      margin: 0;
+      padding: 1rem;
+    }
+
+    .logo {
+      width: 20px;
+    }
+  }
+
+  .item{
+    margin: 30px 10px 0px 10px;
+    height: 80vh;
+    padding: 10px;
+  }
+
+  .item-blog{
+    flex-direction: column;
+    margin: 20px 30px 0px 30px;
+    overflow: hidden;
+    height: 80vh;
+    justify-content: flex-start;
+    .blog-image-container{
+      width:100%;
+      height: 50%;
+    }
+    article{
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+    }
+  }
+
+  .form{
+    input{
+      padding-top: 20px;
+    }
+  }
+
+
+  #home-page {
+    h1 {
+      font-size: 3rem;
+    }
+  }
+}
+
