--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,20 +46,20 @@ body {
 
 body h1 {
   font-family: "Ubuntu", serif;
-  text-shadow: 1px 1px 3px black;
+  text-shadow: 1px 1px 1px white;
 }
 
 body p {
   font-family: "Quicksand", sans-serif;
   font-weight: lighter;
-  text-shadow: 2px 2px 3px black;
+  text-shadow: 0px 1px 2px white;
 }
 
 body time {
   font-family: "Quicksand", sans-serif;
   font-weight: lighter;
   font-size: 12px;
-  text-shadow: 2px 2px 3px black;
+  text-shadow: 2px 2px 3px white;
 }
 
 nav {
@@ -205,6 +205,10 @@ footer {
   height: 55px;
 }
 
+#home-page {
+  color: #fffffe;
+}
+
 .center {
   text-align: center;
   -webkit-box-pack: center;
@@ -258,6 +262,10 @@ footer {
       -ms-flex-direction: column;
           flex-direction: column;
   scroll-snap-align: center;
+}
+
+.contrast {
+  color: black;
 }
 
 .item {
